Refactoring and Forms
1. refactor our code
2. how to use forms with flask
3. move the routes to a new file names routes.py and import app to connect

--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
-
-{% block main %}
+{% extends "base.html" %} {% block main %}
 
 <p>Some content on the about page!</p>
-
+<form action="/about" method="post">
+    {{ form.csrf_token() }} <!-- 'csrf_token' protects form against any malicious requests/attacks-->
+    {{ form.title }}
+    {{ form.submit }}
+</form>
 {%endblock main %}
