--- a/base.html
+++ b/base.html
@@ -1,10 +1,9 @@
 <h1>Title of the website</h1>
 <h3>Subheader: Something Something</h3>
-<hr>
+<hr />
 <ul>
-    <li><a href="#">Home Page</a></li>
-    <li><a href="#">About Page</a></li>
+  <li><a href="{{ url_for('index') }}">Tasks</a></li>
+  <li><a href="{{ url_for('add') }}">Add New</a></li>
 </ul>
 
-{%block main%}
-{%endblock main%}
+{%block main%} {%endblock main%}
