--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 {% block main %}
 
-<p>Some content on the home page!</p>
+<h1>Tasks</h1>
+<ul>
+    {% for task in tasks %}
+        <li>{{ task.title }}  created on {{ task.date }}</li>
+    {% endfor %}
+
+</ul>
 
 {% endblock main %}
