--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <a href="{{ url_for('edit', task_id=task.id)}} " class="btn btn-primary"
       >Edit</a
     >
-    <a href="#" class="btn btn-danger">Delete</a>
+    <a href="{{ url_for('delete', task_id=task.id)}}" class="btn btn-danger"
+      >Delete</a
+    >
   </div>
 </div>
 {% endfor %} {% endblock %}
